--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+userconf-pi (1.0.1) bookworm; urgency=medium
+
+  * Release for HamoniKR OS
+   - No change
+
+ -- Kevin Kim <chaeya@gmail.com>  Sat, 20 Jul 2024 01:32:00 +0900
+
 userconf-pi (1.0.0) bookworm; urgency=medium
 
   * Update for HamoniKR OS
